--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <!--header setion include nav-->
         <header>
+            <h1>Site is under construction..</h1>
            <div class="logo">
                <img src="./man.png" alt="">
            </div>
