--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                        <a href="#" class="nav__link">Projects</a>
                    </li>
                    <li class="nav__item">
-                       <a href="#" class="nav__link">Github</a>
+                       <a href="https://github.com/yadavkrishna" class="nav__link">Github</a>
                    </li>
                    <li class="nav__item">
                        <a href="about" class="nav__link">About me</a>
